# financial-planner-cli

./: .gitignore  .travis.yml  Cargo.toml  README.md  input.yaml
docs/: reference_manual.md  tutorial.md
src/: accounts.rs  errors.rs  expression.rs  iterators.rs  main.rs  money.rs  ordered_iterator.rs  plan.rs
