[package]
name = "financial-planner-cli"
version = "0.1.0"
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]

[dependencies]
rugflo = "0.2"
clap = "2"
serde = "0.9"
serde_derive = "0.9"
serde_yaml = "0.6"
chrono = { version = "0.3", features = ["serde"] }
prettytable-rs = "^0.6"
error-chain = "0.10"
combine = "2"
log = "0.3"
env_logger = "0.4"
